--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,99 @@ header ul li button{
     width: 84px;
     height: 32px;
 }
+
+/*main content*/
+.main-content {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    padding-bottom: 100px;
+    width: 100%;
+}
+
+.logo-image {
+    width: 300px;
+    margin-bottom: 20px;
+}
+
+.search-bar {
+    display: flex;
+    align-items: center;
+    border: 1px solid lightgray;
+    width: 600px;
+    height: 45px;
+    border-radius: 30px;
+    padding-left: 15px;
+}
+
+.search-bar:hover{
+	box-shadow: 0px 0px 4px 0px #B5B5B5;
+}
+
+.search-bar img {
+    margin-right: 15px;
+    font-size: 18px;
+    color: gray;
+    cursor: pointer;
+}
+
+.search-bar input{
+    height: 30px;
+    margin-right: 15px;
+    font-size: 16px;
+    flex-grow: 1;
+    border: none;
+    outline: none;
+}
+
+.action-buttons{
+    margin-top: 20px;
+}
+
+.action-buttons button{
+    border: none;
+    color: black;
+    background-color: white;
+    border-radius: 5px;
+    margin-left: 10px;
+    height: 40px;
+    font-size: 14px;
+}
+
+.action-buttons button:hover {
+    border: 1px solid lightgray;
+}
+
+.google-search-btn {
+    width: 120px;
+}
+
+.lucky-search-btn {
+    width: 140px;
+}
+
+
+.language-selector {
+    margin-top: 20px;
+    font-size: 13px;
+    line-height: 28px;
+    font-weight: 400;
+
+}
+
+.language-selector span{
+   color: #4d5156 ;
+}
+
+.language-selector p a {
+    color: #1a0dab;
+    padding: 3px;
+}
