--- a/css/style.css
+++ b/css/style.css
@@ -152,3 +152,67 @@ header ul li button{
     color: #1a0dab;
     padding: 3px;
 }
+
+/*footer */
+footer {
+    background-color: #F2F2F2;
+    height: 100px;
+    
+}
+
+.footer-content {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+}
+
+footer li{
+    list-style-type: none;
+    padding-right: 10px;
+  
+}
+
+footer li a{
+    text-decoration: none;
+}
+
+.upper-footer {
+    height: 50%;
+    border-bottom: 1px solid lightgray;
+}
+
+.upper-footer p {
+    color: black;
+    font-size: 14px;
+}
+
+.lower-footer {
+    height: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.lower-footer ul li a {
+    font-size: 14px;
+    color: black
+}
+
+.lower-footer ul li a:hover {
+    text-decoration: underline;
+}
+
+.lower-left-footer {
+    display: flex;
+}
+
+.lower-left-footer li {
+    margin-right: 15px;
+}
+
+.lower-right-footer {
+    display: flex;
+}
+
+.lower-right-footer li {
+    margin-left: 15px;
+}
