--- a/css/style.css
+++ b/css/style.css
@@ -216,3 +216,272 @@ footer li a{
 .lower-right-footer li {
     margin-left: 15px;
 }
+/* All CSS */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'arial', sans-serif;
+}
+
+/* body style */
+body {
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+}
+
+
+/* header */
+header{
+    top:0;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    padding: 20px;
+}
+
+header ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+header ul li{
+    list-style: none;
+    margin-left: 20px;
+}
+
+
+header ul li a{
+    color: #111;
+    text-decoration: none;
+    font-size: 13px;
+}
+
+
+header ul li button{
+    background: #3377ec;
+    border: none;
+    outline: none;
+    padding: 7px 15px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 0px;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 84px;
+    height: 32px;
+}
+
+
+/*main content*/
+.main-content {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    padding-bottom: 100px;
+    width: 100%;
+}
+
+.logo-image {
+    width: 300px;
+    margin-bottom: 20px;
+}
+
+.search-bar {
+    display: flex;
+    align-items: center;
+    border: 1px solid lightgray;
+    width: 600px;
+    height: 45px;
+    border-radius: 30px;
+    padding-left: 15px;
+}
+
+.search-bar:hover{
+	box-shadow: 0px 0px 4px 0px #B5B5B5;
+}
+
+.search-bar img {
+    margin-right: 15px;
+    font-size: 18px;
+    color: gray;
+    cursor: pointer;
+}
+
+.search-bar input{
+    height: 30px;
+    margin-right: 15px;
+    font-size: 16px;
+    flex-grow: 1;
+    border: none;
+    outline: none;
+}
+
+.action-buttons{
+    margin-top: 20px;
+}
+
+.action-buttons button{
+    border: none;
+    color: black;
+    background-color: white;
+    border-radius: 5px;
+    margin-left: 10px;
+    height: 40px;
+    font-size: 14px;
+}
+
+.action-buttons button:hover {
+    border: 1px solid lightgray;
+}
+
+.google-search-btn {
+    width: 120px;
+}
+
+.lucky-search-btn {
+    width: 140px;
+}
+
+
+.language-selector {
+    margin-top: 20px;
+    font-size: 13px;
+    line-height: 28px;
+    font-weight: 400;
+
+}
+
+.language-selector span{
+   color: #4d5156 ;
+}
+
+.language-selector p a {
+    color: #1a0dab;
+    padding: 3px;
+}
+
+
+/*footer */
+footer {
+    background-color: #F2F2F2;
+    height: 100px;
+    
+}
+
+.footer-content {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+}
+
+footer li{
+    list-style-type: none;
+    padding-right: 10px;
+  
+}
+
+footer li a{
+    text-decoration: none;
+}
+
+.upper-footer {
+    height: 50%;
+    border-bottom: 1px solid lightgray;
+}
+
+.upper-footer p {
+    color: black;
+    font-size: 14px;
+}
+
+.lower-footer {
+    height: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.lower-footer ul li a {
+    font-size: 14px;
+    color: black
+}
+
+.lower-footer ul li a:hover {
+    text-decoration: underline;
+}
+
+.lower-left-footer {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.lower-left-footer li {
+    margin-right: 15px;
+    
+}
+
+.lower-right-footer {
+    display: flex;
+}
+
+.lower-right-footer li {
+    margin-left: 15px;
+}
+
+
+/*Mobile and Tablet Mode */
+@media only screen and (max-width: 650px) {
+
+/* Google logo image */
+.logo-image{
+    width: 55%;
+}
+ /* Search Bar */
+.search-bar {
+        width: 95%;
+        height: 48px;
+     }
+
+/* Footer */
+footer {
+        height: 150px;
+     
+    }
+
+.upper-footer {
+        height: 50px;
+    }
+
+.lower-footer {
+    height: 100px;
+ 
+    flex-direction: column;
+
+    }
+  
+    .lower-left-footer li{
+        padding-bottom: 20px;
+  
+    }
+
+    .lower-right-footer li {
+        padding-bottom: 20px;
+   
+    
+    }
+
+
+}
+
